feat: Implementar sistema completo de autenticación JWT y gestión de cursos
- Agregar sistema de autenticación JWT con refresh tokens
- Implementar roles de usuario (ADMIN, STUDENT, INSTRUCTOR)
- Crear sistema básico de gestión de cursos
- Agregar middleware de logging de requests
- Configurar Spring Security con autorización por roles
- Implementar DTOs para transferencia de datos
- Agregar inicializador de datos con admin por defecto
- Incluir scripts de prueba para testing del sistema
- Mejorar documentación con comentarios JavaDoc
- Configurar base de datos H2 para desarrollo

--- a/Backend/Dev-learning-Platform/pom.xml
+++ b/Backend/Dev-learning-Platform/pom.xml
@@ -63,6 +63,29 @@
     		<artifactId>h2</artifactId>
     		<scope>runtime</scope>
 		</dependency>
+		
+		<!-- JWT API - Para generar y validar tokens JWT -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+
+		<!-- JWT Implementation - Implementación de JWT -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- JWT Jackson - Para serialización/deserialización de JWT -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
