Change config cors

--- a/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
@@ -68,7 +68,7 @@ stripe.cancel.url=${FRONTEND_URL:https://edu-platform-omega-ten.vercel.app}/paym
 # ==============================================
 # CONFIGURACIÓN DE CORS Y FRONTEND
 # ==============================================
-app.cors.allowed-origins=${FRONTEND_URL:https://edu-platform-omega-ten.vercel.app},https://edu-platform-omega-ten.vercel.app,https://edu-platform-git-develop-juan-valenzuelas-projects.vercel.app
+app.cors.allowed-origins=${FRONTEND_URL:https://edu-platform-omega-ten.vercel.app},https://edu-platform-omega-ten.vercel.app,https://edu-platform-git-develop-juan-valenzuelas-projects.vercel.app,https://edu-platform-*.vercel.app
 
 # ==============================================
 # CONFIGURACIÓN DE SERVIDOR
