--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -55,4 +55,4 @@ stripe.cancel.url=https://edu-platform-omega-ten.vercel.app/payment/cancel
 # ==============================================
 
 # Configuración de CORS - URLs permitidas para el frontend
-app.cors.allowed-origins=http://localhost:5173,https://edu-platform-omega-ten.vercel.app,https://edu-platform-git-develop-juan-valenzuelas-projects.vercel.app
+app.cors.allowed-origins=http://localhost:5173,https://edu-platform-omega-ten.vercel.app,https://edu-platform-git-develop-juan-valenzuelas-projects.vercel.app,https://edu-platform-*.vercel.app
